# CppTestProjects

./: .gitignore  CppTestProjects.sln  README.md
CppTestProjects/: CppTestProjects.csproj  Program.cs
CppTestProjects/Properties/: AssemblyInfo.cs
Source/CompSpeadOfArrayAndPointer/: CompSpeadOfArrayAndPointer.vcxproj  Source.cpp
Source/CvSeq_Test/: CvSeq_Test.vcxproj  PointAndInformationOfContour.txt  Source.cpp
Source/DFT_Test/: DFT_Test.vcxproj  Source.cpp
Source/LearnQueue/: LearnQueue.vcxproj  LearnQueue.vcxproj.filters  QueueClass.cpp  QueueClass.h  Queue_UsingList_C.cpp  Queue_UsingList_C.h  Source.cpp
Source/Linux_Testing/LoggerLib/src/Logger/: CMakeLists.txt  DateTime.h  LogArgs.h  Logger.cpp  Logger.h  LoggerCommon.h
Source/Linux_Testing/LoggerLib/src/Logger.Testing/: CMakeLists.txt  main.cpp
Source/MouseEventTest/: DrawRoi.cpp  DrawRoi.h  MouseEventTest.vcxproj  MouseEventTest.vcxproj.filters  Test.cpp
Source/TestCannyParameter/: Source.cpp  TestCannyParameter.vcxproj
Source/TestCastBtwnPointerAndLongInt/: Source.cpp  TestCastBtwnPointerAndLongInt.vcxproj
Source/TestConsoleAppMenueAndHighlightOpt/: BaseMenu.h  Menu.h  TestConsoleAppMenueAndHighlightOpt.vcxproj  TestConsoleAppMenueAndHighlightOpt.vcxproj.filters  source.cpp
Source/TestCppMap/: Source.cpp  TestCppMap.vcxproj
Source/TestGetRoiImgInAoisub/: DrawRoi.cpp  DrawRoi.h  HsStruct.h  TestGetRoiImgInAoisub.vcxproj  TestGetRoiImgInAoisub.vcxproj.filters
Source/TestJson/: Common_Parameters.h  IAlgorithm.h  Source.cpp  TestJson.vcxproj  TestJson.vcxproj.filters  TestJsonFile.json  (+2 more)
(+39 files in other folders)
